Style updates Fix double scrollback Edit content

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  overflow: hidden;
+}
+
 .menu {
   width: 100%;
   height: 3em;
@@ -28,6 +32,10 @@
   color: #282c34;
 }
 
+.section-title {
+  color: white;
+}
+
 .icon-btn {
   margin-left: 5px;
   margin-right: 10px;
@@ -45,9 +53,6 @@
   color: #282c34;
 }
 
-/* .section {
-  height: 100vh;
-} */
 .MuiPaper-root {
   width: 75%;
   margin-bottom: 1rem;
@@ -63,19 +68,6 @@
   margin-bottom: 1em;
   
 }
-
-/* .project-photo {
-  width: 50%;
-  text-align: right;
-  float: right;
-  margin-left: 1em;
-  margin-bottom: 1em;
-} */
-
-/* .projects-section {
-  overflow: auto;
-  margin-bottom: 1em;
-} */
 
 #right-menu {
   float: right;
